# hexlet-django-blog

./: Makefile  db.sqlite3  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/templates/: base.html  index.html
hexlet_django_blog/templates/articles/: comment.html  create.html  index.html  show.html  update.html
